<resources>
    <string name="app_name">SkSTech</string>
    <string name="begin_the_right_place_for_your_shopping_techs">Begin the Right Place For Your Shopping Techs</string>
    <string name="explore_the_latest_in_tech_at_our_online_store_from_sleek_smartphones_to_powerful_laptops_find_the_perfect_gadgets_to_elevate_your_digital_experience">Explore the latest in tech at our online store! From sleek smartphones to powerful laptops, find the perfect gadgets to elevate your digital experience</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_log_in">Already Have an Account Log in</string>
    <string name="don_t_have_an_account_signup">Don\'t have an Account SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password_not_match">Confirm Password not match</string>
    <string name="enter_valid_password">Enter valid Password</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="email_is_required">Email is required</string>
    <string name="mobile_is_required">Mobile is required</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="the_right_way_for_your_tech_shoppings">The Right Way For Your Tech Shoppings</string>
    <string name="make_your_buisness_the_best_it_can_be_using_the_right_products_from_the_right_corner_for_your_choice">Make your Buisness the best it can Be Using the Right products from the right corner for your choice</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="you_are_registered_successfully">You are Registered Successfully!</string>
</resources>