<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/blury_background"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:foregroundTint="@color/white"
            android:shape="oval"
            android:src="@drawable/baseline_arrow_back_ios_new_24"

        />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.02" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toTopOf="@+id/guideline7"
                    app:srcCompat="@drawable/register" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_dark"
                    android:paddingVertical="20sp"
                    android:text="@string/sign_up"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/space7">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileEt"
                        android:fontFamily="@font/poppins_dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number">


                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:id="@+id/space2"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/space3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEt"
                        android:fontFamily="@font/poppins_dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">


                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:id="@+id/space3"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />


                <Space
                    android:id="@+id/space5"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/regBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_btn_bg"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintLeft_toLeftOf="@id/guideline1"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/space5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/space2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:fontFamily="@font/poppins_dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:id="@+id/space4"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/space4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:fontFamily="@font/poppins_dark"
                        android:hint="@string/confirm_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:id="@+id/space6"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintLeft_toLeftOf="@id/guideline1"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/loginTv" />

                <TextView
                    android:id="@+id/loginTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/already_have_an_account_log_in"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_dark"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/regBtn" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEt"
                        android:fontFamily="@font/poppins_dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:id="@+id/space7"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </LinearLayout>
</layout>
